# openapi-pydantic

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  smokeshow.py  tox.ini
.devcontainer/: devcontainer.json
.github/: release.yml
.github/workflows/: publish.yml  smokeshow.yml  test.yml
openapi_pydantic/: __init__.py  compat.py  util.py
openapi_pydantic/v3/: __init__.py  parser.py
openapi_pydantic/v3/v3_0/: README.md  __init__.py  callback.py  components.py  contact.py  discriminator.py  encoding.py  example.py  external_documentation.py  header.py  info.py  license.py  link.py  media_type.py  oauth_flow.py  open_api.py  operation.py  parameter.py  path_item.py  paths.py  reference.py  request_body.py  response.py  responses.py  schema.py  security_requirement.py  security_scheme.py  server.py  server_variable.py  tag.py  util.py  xml.py
openapi_pydantic/v3/v3_0_3/: README.md  __init__.py  contact.py  datatype.py  encoding.py  external_documentation.py  header.py  info.py  license.py  oauth_flow.py  open_api.py  parameter.py  schema.py  security_scheme.py  util.py
openapi_pydantic/v3/v3_1/: README.md  __init__.py  callback.py  components.py  contact.py  encoding.py  example.py  external_documentation.py  info.py  license.py  link.py  media_type.py  oauth_flow.py  oauth_flows.py  open_api.py  operation.py  parameter.py  path_item.py  paths.py  reference.py  response.py  responses.py  schema.py  security_requirement.py  security_scheme.py  server.py  server_variable.py  tag.py  xml.py
openapi_pydantic/v3/v3_1_0/: README.md  __init__.py  contact.py  encoding.py  external_documentation.py  header.py  info.py  license.py  oauth_flow.py  open_api.py  parameter.py  schema.py  security_scheme.py
tests/: test_alias.py  test_config_example.py  test_enum_schema.py  test_example.py  test_openapi.py  test_parse.py  test_swagger_openapi_v3.py
tests/data/: swagger_openapi_v3.0.1.json
tests/schema_classes/: test_schema.py  test_security_scheme.py
tests/util/: test_optional_and_computed.py  test_pydantic_field.py  test_util.py  test_validated_schema.py
tests/v3_0/: test_config_example.py  test_datatype.py  test_optional_and_computed.py  test_util.py  test_validated_schema.py
tests/v3_0_3/: test_config_example.py  test_optional_and_computed.py  test_util.py  test_validated_schema.py
tests/v3_1/: __init__.py  test_datatype.py
tests/v3_1_0/: __init__.py
